# MathGraph2

./: CMakeLists.txt  README.md  wyniki_operacji_na_macierzach.docx
.results/: wyniki_operacji_na_kwaternionach.txt  wyniki_przeciecia.txt
Application/: CMakeLists.txt  main.cpp  testMatrix.h
Lines/: CMakeLists.txt
Lines/include/: Line.h  Plane.h  Sphere.h
Lines/lib/: Line.h  Plane.h  Segment.h
Lines/src/: Line.cpp  Plane.cpp  Segment.cpp  Sphere.cpp
Matrix/: CMakeLists.txt
Matrix/include/: Matrix3n.h  Matrix4x4.h
Matrix/src/: Matrix3n.cpp  Matrix4x4.cpp
Quaternion/: CMakeLists.txt
Quaternion/include/: Quaternion.h
Quaternion/src/: Quaternion.cpp
Raytracing/: CMakeLists.txt
Raytracing/include/: Cube.h  VirtualCamera.h
Raytracing/src/: Cube.cpp  VirtualCamera.cpp
Vectors/: CMakeLists.txt  Vector.cpp  Vector.h
Vectors/include/: Vector3.h  Vector4.h
Vectors/src/: Vector3.cpp  Vector4.cpp
